/**
 * Classe Main
 *
 * @author AGJMX
 */
public class Main {

    /**
     * Methode main, cree un Jeu
     * @param args arguments
     */
    public static void main(String[] args) {
        new Jeu();
    }
}
