package jeu.utils;

/**
 * Enumeration representant les directions de navigation
 *
 * @author AGJMX
 */
public enum Direction {
    /**
     * DIRECTION EST
     */
    EAST,

    /**
     * DIRECTION NORD
     */
    NORTH,

    /**
     * DIRECTION SUD
     */
    SOUTH,

    /**
     * DIRECTION OUEST
     */
    WEST
}
